--- a/openapi-defs/api_store/LNHPD-en.yaml
+++ b/openapi-defs/api_store/LNHPD-en.yaml
@@ -1,8 +1,13 @@
-swagger: "2.0"
+swagger: '2.0'
 x-api-store-tags:
   - licensing
   - health products
   - natural products
+x-api-store-short-desc: |
+x-api-store-long-desc: |
+x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-phone: '613-355-0261'
+x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
     name: Public Plan
@@ -10,11 +15,14 @@ x-api-store-plans:
 info:
   title: Licensed Natural Health Products Database (LNHPD)
   description: The Licensed Natural Health Products Database (LNHPD) contains information about natural health products (NHPs) that have been issued a product licence by Health Canada.
-  version: "0.1"
+  version: 1
+  contact:
+    name: David Kong
+    email: david.kong@canada.ca
 
 schemes:
   - https
-host: lnhpd-hc-sc-apicast-staging.beta.api.canada.ca
+host: lnhpd-hc-sc-apicast-production.api.canada.ca
 basePath: /api/natural-licences/
 produces:
   - application/json
@@ -27,23 +35,23 @@ paths:
         - Medicinal Ingredient
       description: Returns all medicinal ingredients.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryPage"
-        - $ref: "#/parameters/QueryProductID"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryPage'
+        - $ref: '#/parameters/QueryProductID'
       responses:
-        "200":
+        '200':
           description: Returns a list of all medicinal ingredients, or if an ID is provided, the list of all medicinal ingredients that correspond to the given product identifier
           schema:
-            $ref: "#/definitions/MedicinalIngredientResponse"
+            $ref: '#/definitions/MedicinalIngredientResponse'
             xml:
               name: MedicinalIngredients
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /nonmedicinalingredient:
     get:
@@ -51,24 +59,24 @@ paths:
         - Non Medicinal Ingredient
       description: Returns all non-medicinal ingredients.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryProductID"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryProductID'
       responses:
-        "200":
+        '200':
           description: Returns a list of all non-medicinal ingredients, or if an ID is provided, the list of all non-medicinal ingredients that correspond to the given product identifier
           schema:
             type: array
             items:
-              $ref: "#/definitions/NonMedicinalIngredient"
+              $ref: '#/definitions/NonMedicinalIngredient'
             xml:
               name: NonMedicinalIngredients
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /productdose:
     get:
@@ -76,24 +84,24 @@ paths:
         - Product
       description: Returns all product doses.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryProductID"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryProductID'
       responses:
-        "200":
+        '200':
           description: Returns a list of all product doses, or if an ID is provided, the list of all product doses that correspond to the given product identifier
           schema:
             type: array
             items:
-              $ref: "#/definitions/ProductDose"
+              $ref: '#/definitions/ProductDose'
             xml:
               name: ProductDoses
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /productlicence:
     get:
@@ -101,27 +109,27 @@ paths:
         - Product
       description: Returns all product licences.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           type: string
           in: query
           description: Limit the results to those with matching licence number
       responses:
-        "200":
+        '200':
           description: Returns a list of all product licences, or if an ID is provided, the list of all product licences that correspond to the given licence number
           schema:
             type: array
             items:
-              $ref: "#/definitions/ProductLicence"
+              $ref: '#/definitions/ProductLicence'
             xml:
               name: ProductLicence
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /productpurpose:
     get:
@@ -129,25 +137,25 @@ paths:
         - Product
       description: Returns all product purposes.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryPage"
-        - $ref: "#/parameters/QueryProductID"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryPage'
+        - $ref: '#/parameters/QueryProductID'
       responses:
-        "200":
+        '200':
           description: Returns a list of all product purposes, or if an ID is provided, the list of all product purposes that correspond to the given product identifier
           schema:
             type: array
             items:
-              $ref: "#/definitions/ProductPurposeResponse"
+              $ref: '#/definitions/ProductPurposeResponse'
             xml:
               name: ProductPurposes
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /productrisk:
     get:
@@ -155,25 +163,25 @@ paths:
         - Product
       description: Returns all product risks.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryPage"
-        - $ref: "#/parameters/QueryProductID"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryPage'
+        - $ref: '#/parameters/QueryProductID'
       responses:
-        "200":
+        '200':
           description: Returns a list of all product risks, or if an ID is provided, the list of all product risks that correspond to the given product identifier
           schema:
             type: array
             items:
-              $ref: "#/definitions/ProductRiskResponse"
+              $ref: '#/definitions/ProductRiskResponse'
             xml:
               name: ProductRisk
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /productroute:
     get:
@@ -181,29 +189,29 @@ paths:
         - Product
       description: Returns all product routes.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryProductID"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryProductID'
       responses:
-        "200":
+        '200':
           description: Returns a list of all product routes, or if an ID is provided, the list of all product routes that correspond to the given product identifier
           schema:
             type: array
             items:
-              $ref: "#/definitions/ProductRoute"
+              $ref: '#/definitions/ProductRoute'
             xml:
               name: ProductRoute
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
 definitions:
-  "204":
+  '204':
     type: string
-  "404":
+  '404':
     type: string
 
   MedicinalIngredient:
@@ -262,11 +270,11 @@ definitions:
     type: object
     properties:
       metadata:
-        $ref: "#/definitions/Metadata"
+        $ref: '#/definitions/Metadata'
       data:
         type: array
         items:
-          $ref: "#/definitions/MedicinalIngredient"
+          $ref: '#/definitions/MedicinalIngredient'
 
   Metadata:
     type: object
@@ -419,11 +427,11 @@ definitions:
       name: Response
     properties:
       metadata:
-        $ref: "#/definitions/Metadata"
+        $ref: '#/definitions/Metadata'
       data:
         type: array
         items:
-          $ref: "#/definitions/ProductPurpose"
+          $ref: '#/definitions/ProductPurpose'
         xml:
           name: Data
           wrapped: true
@@ -456,11 +464,11 @@ definitions:
       name: Response
     properties:
       metadata:
-        $ref: "#/definitions/Metadata"
+        $ref: '#/definitions/Metadata'
       data:
         type: array
         items:
-          $ref: "#/definitions/ProductRisk"
+          $ref: '#/definitions/ProductRisk'
         xml:
           name: Data
           wrapped: true
@@ -518,7 +526,7 @@ parameters:
     type: string
     required: true
   UserKeys:
-    name: "user-key"
+    name: 'user-key'
     type: string
     in: header
     required: true
