--- a/openapi-defs/api_store/DPD-fr.yaml
+++ b/openapi-defs/api_store/DPD-fr.yaml
@@ -1,8 +1,13 @@
-swagger: "2.0"
+swagger: '2.0'
 x-api-store-tags:
   - drug
   - pharmaceutical
   - medical
+x-api-store-short-desc: |
+x-api-store-long-desc: |
+x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-phone: '613-954-2964'
+x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
     name: Public Plan
@@ -16,11 +21,14 @@ info:
 
     Santé Canada est l'organisme fédéral qui réglemente les produits thérapeutiques et nous ne donnons pas de conseils médicaux sur l'utilisation des produits dans cette base de données. Pour de plus amples informations sur les choix de traitement, les choix de médicament et leurs utilisations, maladies, effets secondaires et interactions médicamenteuses, veuillez contacter votre professionnel de la santé.
 
-  version: "0.1"
+  version: 1
+  contact:
+    name: Valerie Tweedle
+    email: valerie.tweedle@canada.ca
 
 schemes:
   - https
-host: dpd-hc-sc-apicast-staging.beta.api.canada.ca
+host: dpd-hc-sc-apicast-production.api.canada.ca
 basePath: /api/drug/
 produces:
   - application/json
@@ -33,28 +41,28 @@ paths:
         - Ingrédient actif
       description: Returns all active ingredients.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
         - name: ingredientname
           in: query
           type: string
           description: Affiche les ingrédients actifs selon le texte spécifié dans la requête.
       responses:
-        "200":
+        '200':
           description: Returns a list of all active ingredients, or if an ID is provided, the list of all active ingredients that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/ActiveIngredient"
+              $ref: '#/definitions/ActiveIngredient'
             xml:
               name: ActiveIngredients
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /company:
     get:
@@ -62,27 +70,27 @@ paths:
         - Entreprise
       description: Returns all companies.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche les détails de l'entreprise selon le code de l'entreprise spécifié dans la requête.
       responses:
-        "200":
+        '200':
           description: Returns a list of all companies, or if an ID is provided, the list of all companies that correspond to the given company code
           schema:
             type: array
             items:
-              $ref: "#/definitions/Company"
+              $ref: '#/definitions/Company'
             xml:
               name: Companies
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /drugproduct:
     get:
@@ -90,10 +98,10 @@ paths:
         - Produit pharmaceutique
       description: Returns all drug products.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
         - name: din
           in: query
           type: string
@@ -124,19 +132,19 @@ paths:
             - 9
             - 10
       responses:
-        "200":
+        '200':
           description: Returns a list of all drug products, or if an ID is provided, the list of all drug products that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/DrugProduct"
+              $ref: '#/definitions/DrugProduct'
             xml:
               name: DrugProducts
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /form:
     get:
@@ -144,10 +152,10 @@ paths:
         - Forme posologique
       description: Returns all dosage forms.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
         - name: active
           in: query
           type: string
@@ -155,19 +163,19 @@ paths:
             - yes
           description: Affiche les formes posologiques qui sont actives.
       responses:
-        "200":
+        '200':
           description: Returns a list of all dosage forms, or if an ID is provided, the list of all dosage forms that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/DosageForm"
+              $ref: '#/definitions/DosageForm'
             xml:
               name: DosageForms
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /packaging:
     get:
@@ -175,23 +183,23 @@ paths:
         - Emballage
       description: Returns all packaging information for drug products.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
       responses:
-        "200":
+        '200':
           description: Returns a list of all packaging information, or if an ID is provided, the list of all packaging information that corresponds to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/Packaging"
+              $ref: '#/definitions/Packaging'
             xml:
               name: Packaging
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /pharmaceuticalstd:
     get:
@@ -199,23 +207,23 @@ paths:
         - Norme pharmaceutique
       description: Returns all dosage forms.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
       responses:
-        "200":
+        '200':
           description: Returns a list of all pharmaceutical standards, or if an ID is provided, the list of all pharmaceutical standards that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/PharmaceuticalStandard"
+              $ref: '#/definitions/PharmaceuticalStandard'
             xml:
               name: PharmaceuticalStandards
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /route:
     get:
@@ -223,10 +231,10 @@ paths:
         - Voie d'administration
       description: Returns all routes of administration.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
         - name: active
           in: query
           type: string
@@ -234,19 +242,19 @@ paths:
             - yes
           description: Affiche les voies d'administration qui sont actives.
       responses:
-        "200":
+        '200':
           description: Returns a list of all routes of administration, or if an ID is provided, the list of all routes of administration that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/RouteOfAdministration"
+              $ref: '#/definitions/RouteOfAdministration'
             xml:
               name: RoutesOfAdministration
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /schedule:
     get:
@@ -254,10 +262,10 @@ paths:
         - Annexe
       description: Returns all schedules.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
         - name: active
           in: query
           type: string
@@ -265,19 +273,19 @@ paths:
             - yes
           description: Affiche les annexes qui sont actives.
       responses:
-        "200":
+        '200':
           description: Returns a list of all schedules, or if an ID is provided, the list of all schedules that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/Schedule"
+              $ref: '#/definitions/Schedule'
             xml:
               name: Schedules
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /status:
     get:
@@ -285,24 +293,24 @@ paths:
         - État
       description: Returns all product statuses.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
       responses:
-        "200":
+        '200':
           description: Returns a list of all product statuses, or if an ID is provided, the list of all product statuses that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/ProductStatus"
+              $ref: '#/definitions/ProductStatus'
             xml:
               name: ProductStatuses
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /therapeuticclass:
     get:
@@ -310,24 +318,24 @@ paths:
         - Classe thérapeutique
       description: Returns all therapeutic classes.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
       responses:
-        "200":
+        '200':
           description: Returns a list of all therapeutic classes, or if an ID is provided, the list of all therapeutic classes that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/TherapeuticClass"
+              $ref: '#/definitions/TherapeuticClass'
             xml:
               name: TherapeuticClasses
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /veterinaryspecies:
     get:
@@ -335,29 +343,29 @@ paths:
         - Espèces animales
       description: Returns all veterinary species.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryDrugProductCode"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryDrugProductCode'
       responses:
-        "200":
+        '200':
           description: Returns a list of all veterinary species, or if an ID is provided, the list of all veterinary species that correspond to the given drug product code
           schema:
             type: array
             items:
-              $ref: "#/definitions/VeterinarySpecies"
+              $ref: '#/definitions/VeterinarySpecies'
             xml:
               name: VeterinarySpeciesList
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
 definitions:
-  "204":
+  '204':
     type: string
-  "404":
+  '404':
     type: string
   ActiveIngredient:
     type: object
@@ -376,7 +384,7 @@ definitions:
         type: string
         description: La valeur pour une unité posologique.
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       ingredient_name:
         type: string
         description: Le nom de l'ingrédient.
@@ -446,7 +454,7 @@ definitions:
         type: string
         description: Des détails supplémentaires ou des descriptions pour un produit, s'il y a lieu.
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       drug_identification_number:
         type: string
         description: L'Identification numérique de la drogue.
@@ -467,7 +475,7 @@ definitions:
       Un produit peut avoir plus d'une forme posologique (p. ex. comprimé, gélule) dans le cas d'une trousse.
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       pharmaceutical_form_code:
         type: string
         description: Le code attribué à une forme posologique.
@@ -516,7 +524,7 @@ definitions:
     description: La norme qui régit la fabrication et la représentation d'un produit pharmaceutique.
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       pharmaceutical_std:
         type: string
         description: La norme pharmaceutique.
@@ -531,7 +539,7 @@ definitions:
       Un produit peut avoir plus d'une voie d'administration (p. ex. voie intraveineuse, intramusculaire, intra-articulaire, etc.).
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       route_of_administration_code:
         type: string
         description: Le code attribué à une voie d'administration.
@@ -562,7 +570,7 @@ definitions:
         - Spécialité médicale: médicament qui peut être vendu sans ordonnance en vertu des lois fédérales, mais qui est habituellement prescrit par un praticien. Les produits de spécialité médicale sont des médicaments sans ordonnance, qui ne font pas partie d'une annexe, à usage professionnel (par exemple, les agents de contraste pour imagerie par résonance magnétique (IRM) et les solutions pour l'hémodialyse) et quelques médicaments pour cas d'urgence (par exemple, la nitroglycérine).
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       schedule_name:
         type: string
         description: L'annexe conformément au Règlement sur les aliments et drogues et à la Loi réglementant certaines drogues et autres substances.
@@ -584,7 +592,7 @@ definitions:
       - Dormant : fait référence à un DIN actif pour une drogue qui était commercialisée au Canada dont le fabricant a suspendu la vente pendant au moins 12 mois.
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       expiration_date:
         type: string
         description: La date limite d'utilisation la plus tardive attribuée à la drogue distribuée au Canada, où la vente du produit est cessée par le fabricant.
@@ -617,7 +625,7 @@ definitions:
     description: Classe attribuée à un médicament en fonction du principal usage thérapeutique.
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       tc_ahfs:
         type: string
         description: La description du code American Hospital Formulary Service.
@@ -642,7 +650,7 @@ definitions:
     description: Les espèces auxquelles les produits vétérinaires sont destinés (p. ex. mouton, chien, bovin et volaille).
     properties:
       drug_code:
-        $ref: "#/definitions/DrugCode"
+        $ref: '#/definitions/DrugCode'
       vet_species_name:
         type: string
         description: L'espèce animale.
@@ -675,7 +683,7 @@ parameters:
     in: query
     type: string
   UserKeys:
-    name: "user-key"
+    name: 'user-key'
     type: string
     in: header
     required: true
