--- a/openapi-defs/api_store/MDALL-fr.yaml
+++ b/openapi-defs/api_store/MDALL-fr.yaml
@@ -1,8 +1,13 @@
-swagger: "2.0"
+swagger: '2.0'
 x-api-store-tags:
   - medical
   - devices
   - services
+x-api-store-short-desc: |
+x-api-store-long-desc: |
+x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-phone: '613-954-0285'
+x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
     name: Public Plan
@@ -17,11 +22,14 @@ info:
     Le Bureau maintient une base de données sur tous les instruments médicaux de classe II, III ou IV vendus au Canada. Les instruments médicaux de classe I ne requiert pas une homologation des intruments médicaux. Ils sont réglementés par la Direction générale des opérations réglementaires et des régions (Conformité et application de la loi) au moyen des licences d'établissement.
 
     Seuls les produits figurant sur cette liste électronique peuvent être offerts pour la vente au Canada. Les instruments médicaux de classe 1 ou vendus aux fins d'essais expérimentaux et aux fins d'un accès spécial ne sont pas inclus.
-  version: "0.1"
+  version: 1
+  contact:
+    name: Sarah Chandler
+    email: sarah.chandler@canada.ca
 
 schemes:
   - https
-host: mdall-hc-sc-apicast-staging.beta.api.canada.ca
+host: mdall-hc-sc-apicast-production.api.canada.ca
 basePath: /api/instrument-medicaux/
 produces:
   - application/json
@@ -34,14 +42,14 @@ paths:
         - Homologation
       description: Returns all licences.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche l'homogolation selon le numéro d'homogolation spécifié dans la requête.
-        - $ref: "#/parameters/QueryState"
+        - $ref: '#/parameters/QueryState'
         - name: licence_name
           in: query
           type: string
@@ -51,19 +59,19 @@ paths:
           type: string
           description: Affiche les homogolations dont le numéro d'identification de l'entreprise.
       responses:
-        "200":
+        '200':
           description: Returns a list of all licences, or if an ID is provided, the list of all licences that correspond to the given licence number
           schema:
             type: array
             items:
-              $ref: "#/definitions/Licence"
+              $ref: '#/definitions/Licence'
             xml:
               name: Licences
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /company:
     get:
@@ -71,9 +79,9 @@ paths:
         - Entreprise
       description: Returns all companies.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
@@ -94,19 +102,19 @@ paths:
           type: string
           description: Affiche les entreprises qui contiennent bayer dans leur nom.
       responses:
-        "200":
+        '200':
           description: Returns a list of all companies, or if an ID is provided, the list of all companies that correspond to the given company ID
           schema:
             type: array
             items:
-              $ref: "#/definitions/Company"
+              $ref: '#/definitions/Company'
             xml:
               name: Licences
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /device:
     get:
@@ -114,32 +122,32 @@ paths:
         - Instrument médical
       description: Returns all devices.
       parameters:
-        - $ref: "#/parameters/UserKeys"
+        - $ref: '#/parameters/UserKeys'
         # - $ref: '#/parameters/QueryLang'
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche l'instrument médical selon le numéro d'identification de l'instrument médical spécifié dans la requête.
-        - $ref: "#/parameters/QueryState"
+        - $ref: '#/parameters/QueryState'
         - name: device_name
           in: query
           type: string
           description: Affiche les instruments médicaux qui contiennent le nom.
       responses:
-        "200":
+        '200':
           description: Returns a list of all devices, or if an ID is provided, the list of all devices that correspond to the given device identification number
           schema:
             type: array
             items:
-              $ref: "#/definitions/Device"
+              $ref: '#/definitions/Device'
             xml:
               name: Devices
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /deviceidentifier:
     get:
@@ -147,32 +155,32 @@ paths:
         - Instrument médical
       description: Returns all device identifiers.
       parameters:
-        - $ref: "#/parameters/UserKeys"
+        - $ref: '#/parameters/UserKeys'
         # - $ref: '#/parameters/QueryLang'
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche l'identificateur d'instrument selon le numéro d'identification de l'instrument spécifié dans la requête.
-        - $ref: "#/parameters/QueryState"
+        - $ref: '#/parameters/QueryState'
         - name: device_identifier
           in: query
           type: string
           description: Affiche les instruments qui contiennent le donné dans leur identificateur de l'instrument.
       responses:
-        "200":
+        '200':
           description: Returns a list of all device identifiers, or if an ID is provided, the list of all device identifiers that correspond to the given device identifier
           schema:
             type: array
             items:
-              $ref: "#/definitions/DeviceIdentifier"
+              $ref: '#/definitions/DeviceIdentifier'
             xml:
               name: DeviceIdentifiers
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /licencetype:
     get:
@@ -180,27 +188,27 @@ paths:
         - Homologation
       description: Returns all licence types.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: code
           in: query
           type: string
           description: Affiche un type de demande d'homologation selon le code d'un type de demande d'homologation spécifié dans la requête.
       responses:
-        "200":
+        '200':
           description: Returns a list of all licence types, or if a code is provided, the list of all licence types that correspond to the given code
           schema:
             type: array
             items:
-              $ref: "#/definitions/LicenceType"
+              $ref: '#/definitions/LicenceType'
             xml:
               name: LicenceTypes
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /sbdlocation:
     get:
@@ -208,33 +216,33 @@ paths:
         - Sommaire des motifs de décision (emplacement)
       description: Returns all summary basis decision locations.
       parameters:
-        - $ref: "#/parameters/UserKeys"
+        - $ref: '#/parameters/UserKeys'
         # - $ref: '#/parameters/QueryLang'
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche l'emplacement du Sommaire des motifs de décision selon le numéro d'homogolation spécifié dans la requête.
 
       responses:
-        "200":
+        '200':
           description: Returns a list of all locations, or if an ID is provided, the list of all locations that correspond to the given licence number
           schema:
             type: array
             items:
-              $ref: "#/definitions/SummaryBasisDecisionLocation"
+              $ref: '#/definitions/SummaryBasisDecisionLocation'
             xml:
               name: SummaryBasisDecisionLocations
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
 definitions:
-  "204":
+  '204':
     type: string
-  "404":
+  '404':
     type: string
 
   DeviceIdentifier:
@@ -454,7 +462,7 @@ parameters:
       - archived
     description: Affiche les homogolations selon l'état spécifié dans la requête.
   UserKeys:
-    name: "user-key"
+    name: 'user-key'
     type: string
     in: header
     required: true
