--- a/openapi-defs/api_store/NOC-fr.yaml
+++ b/openapi-defs/api_store/NOC-fr.yaml
@@ -1,9 +1,14 @@
-swagger: "2.0"
+swagger: '2.0'
 x-api-store-tags:
   - compliance
   - food
   - drugs
   - veterinary
+x-api-store-short-desc: |
+x-api-store-long-desc: |
+x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-phone: '613-954-2964'
+x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
     name: Public Plan
@@ -14,11 +19,14 @@ info:
     Un Avis de conformité (AC) est émis au fabricant si la présentation de drogue nouvelle est jugée conforme au Règlement sur les aliments et drogues après un examen complet.
 
     La base de données est mise à jour tous les soirs et elle comprend des renseignements sur les AC concernant les médicaments pour usage humain émis depuis le 1er janvier 1994 jusqu'à ce jour. Elle comprend également les renseignements sur les AC concernant les médicaments vétérinaires émis depuis le 19 septembre 2000 jusqu'à ce jour. Santé Canada ajoutera progressivement les AC concernant les médicaments vétérinaires émis entre le 1er janvier 1994 et le 18 septembre 2000.
-  version: "0.1"
+  version: 1
+  contact:
+    name: Valerie Tweedle
+    email: valerie.tweedle@canada.ca
 
 schemes:
   - https
-host: noc-hc-sc-apicast-staging.beta.api.canada.ca
+host: noc-hc-sc-apicast-production.api.canada.ca
 basePath: /api/avis-de-conformite/
 produces:
   - application/json
@@ -31,24 +39,24 @@ paths:
         - Produit pharmaceutique
       description: Returns all drug products.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryNoticeOfComplianceNumber"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
-        "200":
+        '200':
           description: Returns a list of all drug products, or if an ID is provided, the list of all drug products that correspond to the given Notice of Compliance number
           schema:
             type: array
             items:
-              $ref: "#/definitions/DrugProduct"
+              $ref: '#/definitions/DrugProduct'
             xml:
               name: DrugProducts
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /noticeofcompliancemain:
     get:
@@ -56,24 +64,24 @@ paths:
         - Avis de conformité
       description: Returns all compliance notifications
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryNoticeOfComplianceNumber"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
-        "200":
+        '200':
           description: Returns a list of all compliance notices, or if an ID is provided, the list of all notices of compliance that correspond to the given Notice of Compliance number
           schema:
             type: array
             items:
-              $ref: "#/definitions/NoticeOfCompliance"
+              $ref: '#/definitions/NoticeOfCompliance'
             xml:
               name: NoticesOfCompliance
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /dosageform:
     get:
@@ -81,24 +89,24 @@ paths:
         - Forme posologique
       description: Returns all dosage forms
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryNoticeOfComplianceNumber"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
-        "200":
+        '200':
           description: Returns a list of all dosage forms, or if an ID is provided, the list of all dosage forms that correspond to the given Notice of Compliance number
           schema:
             type: array
             items:
-              $ref: "#/definitions/DosageForm"
+              $ref: '#/definitions/DosageForm'
             xml:
               name: DosageForms
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /medicinalingredient:
     get:
@@ -106,24 +114,24 @@ paths:
         - Ingrédient médicinal
       description: Returns all medicinal ingredients
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryNoticeOfComplianceNumber"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
-        "200":
+        '200':
           description: Returns a list of all medicinal ingredients, or if an ID is provided, the list of all medicinal ingredients that correspond to the given Notice of Compliance number
           schema:
             type: array
             items:
-              $ref: "#/definitions/MedicinalIngredient"
+              $ref: '#/definitions/MedicinalIngredient'
             xml:
               name: MedicinalIngredients
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /route:
     get:
@@ -131,24 +139,24 @@ paths:
         - Voie d'administration
       description: Returns all administration routes
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryNoticeOfComplianceNumber"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
-        "200":
+        '200':
           description: Returns a list of all administration routes, or if an ID is provided, the list of all routes that correspond to the given Notice of Compliance number
           schema:
             type: array
             items:
-              $ref: "#/definitions/RouteOfAdministration"
+              $ref: '#/definitions/RouteOfAdministration'
             xml:
               name: RouteOfAdministration
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /vetspecies:
     get:
@@ -156,29 +164,29 @@ paths:
         - Espèces animales
       description: Returns all veterinary species
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
-        - $ref: "#/parameters/QueryNoticeOfComplianceNumber"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
+        - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
-        "200":
+        '200':
           description: Returns a list of all veterinary species, or if an ID is provided, the list of all species that correspond to the given Notice of Compliance number
           schema:
             type: array
             items:
-              $ref: "#/definitions/VeterinarySpecies"
+              $ref: '#/definitions/VeterinarySpecies'
             xml:
               name: RouteOfAdministration
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
 definitions:
-  "204":
+  '204':
     type: string
-  "404":
+  '404':
     type: string
 
   DosageForm:
@@ -399,7 +407,7 @@ parameters:
     in: query
     description: Affiche l'avis de conformité selon le numéro d'un avis de conformité spécifié dans la requête. number
   UserKeys:
-    name: "user-key"
+    name: 'user-key'
     type: string
     in: header
     required: true
