--- a/openapi-defs/api_store/SR-fr.yaml
+++ b/openapi-defs/api_store/SR-fr.yaml
@@ -1,8 +1,13 @@
-swagger: "2.0"
+swagger: '2.0'
 x-api-store-tags:
   - summary
   - health products
   - drugs
+x-api-store-short-desc: |
+x-api-store-long-desc: |
+x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-phone: '613-222-7658'
+x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
     name: Public Plan
@@ -14,10 +19,14 @@ info:
     regroupe l’information au sujet des licences de produit, des inspections, de
     l’achat et de l’utilisation sécuritaire des produits, des effets
     secondaires, des rappels et des plaintes.
-  version: "0.1"
+  version: 1
+  contact:
+    name: Scott Kennedy
+    email: scott.kennedy2@canada.ca
+
 schemes:
   - https
-host: sr-hc-sc-apicast-staging.beta.api.canada.ca
+host: sr-hc-sc-apicast-production.api.canada.ca
 basePath: /api/summary-report/api/
 produces:
   - application/json
@@ -29,15 +38,15 @@ paths:
         - Summary Basis of Decision
       description: Returns all summaries of basis of decisions.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Limit results to those with matching link ID
       responses:
-        "200":
+        '200':
           description: |
             Returns a list of all summaries of basis of decisions, or if an ID
             is provided, the list of all summaries that correspond to the given
@@ -45,58 +54,58 @@ paths:
           schema:
             type: array
             items:
-              $ref: "#/definitions/SummaryBasisOfDecision"
+              $ref: '#/definitions/SummaryBasisOfDecision'
             xml:
               name: SummaryBasisOfDecisions
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
   /regulatorydecision:
     get:
       tags:
         - Regulatory Decision
       description: Returns all regulatory decisions.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Limit results to those with matching link ID
       responses:
-        "200":
+        '200':
           description: |
             Returns a list of all regulatory decisions, or if an ID is provided,
             the list of all decisions that correspond to the given link ID
           schema:
             type: array
             items:
-              $ref: "#/definitions/RegulatoryDecision"
+              $ref: '#/definitions/RegulatoryDecision'
             xml:
               name: RegulatoryDecisions
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
   /safetyreview:
     get:
       tags:
         - Summary Safety Review (SSR)
       description: Returns all summary safety reviews.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Limit results to those with matching link ID
       responses:
-        "200":
+        '200':
           description: |
             Returns a list of all summary safety reviews, or if an ID is
             provided, the list of all summaries that correspond to the given
@@ -104,18 +113,18 @@ paths:
           schema:
             type: array
             items:
-              $ref: "#/definitions/SummarySafetyReview"
+              $ref: '#/definitions/SummarySafetyReview'
             xml:
               name: SummarySafetyReview
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 definitions:
-  "204":
+  '204':
     type: string
-  "404":
+  '404':
     type: string
   SummaryBasisOfDecision:
     type: object
@@ -232,19 +241,19 @@ definitions:
         description: Les motifs de décision d’ordre qualitatif.
       contact:
         type: string
-        description: ""
+        description: ''
       paat_info:
         type: string
-        description: ""
+        description: ''
       summary_drug:
         type: string
-        description: ""
+        description: ''
       branch_info:
         type: string
-        description: ""
+        description: ''
       trademark:
         type: string
-        description: ""
+        description: ''
       din:
         type: string
         description: Le ou les numéros d’identification d’un médicament.
@@ -253,7 +262,7 @@ definitions:
         description: Le numéro de licence du produit.
       ai_str_route_summary:
         type: string
-        description: ""
+        description: ''
       is_md:
         type: string
         description: Le produit est_md (instrument médical).
@@ -267,12 +276,12 @@ definitions:
         type: array
         description: La liste des jalons du produit.
         items:
-          $ref: "#/definitions/MilestoneList"
+          $ref: '#/definitions/MilestoneList'
       tombstone_list:
         type: array
         description: La liste de base du produit.
         items:
-          $ref: "#/definitions/TombstoneList"
+          $ref: '#/definitions/TombstoneList'
     xml:
       name: SummaryBasisOfDecision
   MilestoneList:
@@ -296,7 +305,7 @@ definitions:
         description: La date 2 de la fin de l'étape.
       separator:
         type: string
-        description: ""
+        description: ''
   TombstoneList:
     type: object
     description: Le base du produit.
@@ -382,16 +391,16 @@ definitions:
         description: Le numéro de contrôle de la présentation.
       application_number:
         type: string
-        description: ""
+        description: ''
       application_type:
         type: string
-        description: ""
+        description: ''
       licence_num:
         type: string
-        description: ""
+        description: ''
       device_class:
         type: string
-        description: ""
+        description: ''
       created_date:
         type: string
         description: La date de création
@@ -442,7 +451,7 @@ definitions:
         description: Cette variable est utilisée pour créer des liens entre toutes les données du REI.
       review_date:
         type: string
-        description: ""
+        description: ''
       drug_name:
         type: string
         description: Le nom du médicament, sa classe ou ses ingrédients actifs.
@@ -451,10 +460,10 @@ definitions:
         description: Le texte relatif à la question d’innocuité (dans le modèle no 2).
       safetyissue_title:
         type: string
-        description: ""
+        description: ''
       findings_title:
         type: string
-        description: ""
+        description: ''
       issue:
         type: string
         description: Le texte relatif à la question d’innocuité (dans le modèle no 1).
@@ -496,7 +505,7 @@ definitions:
         description: Un numéro de référence pour le texte relatif à la liste des notes en bas de page.
       title:
         type: string
-        description: ""
+        description: ''
       created_date:
         type: string
         description: La date à laquelle le REI a été créé.
